--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
-
 {
   "name": "whatsapp-saas-gateway",
   "version": "1.0.0",
   "private": true,
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
   "dependencies": {
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -10,8 +15,11 @@
     "framer-motion": "10.16.4"
   },
   "devDependencies": {
+    "@types/node": "^20.10.0",
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.0",
-    "typescript": "5.3.3"
+    "@vitejs/plugin-react": "^4.2.1",
+    "typescript": "5.3.3",
+    "vite": "^5.0.8"
   }
 }
