--- a/package.json
+++ b/package.json
@@ -9,16 +9,27 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@whiskeysockets/baileys": "^7.0.0-rc.9",
+    "express": "^5.2.1",
+    "framer-motion": "10.16.4",
+    "lucide-react": "0.344.0",
+    "pino": "^10.1.0",
+    "pino-pretty": "^13.1.3",
+    "qrcode-terminal": "^0.12.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "lucide-react": "0.344.0",
-    "framer-motion": "10.16.4"
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
-    "@types/node": "^20.10.0",
+    "@types/express": "^5.0.6",
+    "@types/node": "^20.19.27",
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.0",
     "@vitejs/plugin-react": "^4.2.1",
+    "concurrently": "^9.2.1",
+    "nodemon": "^3.1.11",
+    "ts-node": "^10.9.2",
     "typescript": "5.3.3",
     "vite": "^5.0.8"
   }
