--- a/package.json
+++ b/package.json
@@ -5,16 +5,20 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "server": "ts-node --esm --project tsconfig.server.json server.ts",
+    "start": "concurrently \"npm run server\" \"npm run dev\"",
     "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/qrcode": "^1.5.6",
     "@whiskeysockets/baileys": "^7.0.0-rc.9",
     "express": "^5.2.1",
     "framer-motion": "10.16.4",
     "lucide-react": "0.344.0",
     "pino": "^10.1.0",
     "pino-pretty": "^13.1.3",
+    "qrcode": "^1.5.4",
     "qrcode-terminal": "^0.12.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
