--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
   "dependencies": {
     "@types/qrcode": "^1.5.6",
     "@whiskeysockets/baileys": "^7.0.0-rc.9",
+    "dotenv": "^17.2.3",
     "emoji-picker-react": "^4.16.1",
     "express": "^5.2.1",
     "framer-motion": "10.16.4",
     "link-preview-js": "^3.2.0",
     "lucide-react": "0.344.0",
+    "mongoose": "^9.0.2",
     "pino": "^10.1.0",
     "pino-pretty": "^13.1.3",
     "qrcode": "^1.5.4",
@@ -32,6 +34,7 @@
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
+    "@types/dotenv": "^6.1.1",
     "@types/express": "^5.0.6",
     "@types/node": "^20.19.27",
     "@types/react": "18.2.0",
