--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
   "dependencies": {
     "@types/qrcode": "^1.5.6",
     "@whiskeysockets/baileys": "^7.0.0-rc.9",
+    "bcryptjs": "^3.0.3",
     "dotenv": "^17.2.3",
     "emoji-picker-react": "^4.16.1",
     "express": "^5.2.1",
     "framer-motion": "10.16.4",
+    "jsonwebtoken": "^9.0.3",
     "link-preview-js": "^3.2.0",
     "lucide-react": "0.344.0",
     "mongoose": "^9.0.2",
@@ -34,8 +36,10 @@
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/dotenv": "^6.1.1",
     "@types/express": "^5.0.6",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20.19.27",
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.0",
