feat: Implement WhatsApp gateway engine with Baileys, MongoDB authentication, and new models for user, session, contact, and message management.

--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -16,6 +16,11 @@
     },
     "include": [
         "server.ts",
-        "services/**/*"
-    ]
+        "services/**/*",
+        "models/**/*"
+    ],
+    "ts-node": {
+        "esm": true,
+        "experimentalSpecifierResolution": "node"
+    }
 }
