--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "start:prod": "node dist-server/server.js"
   },
   "dependencies": {
+    "@types/cors": "^2.8.19",
     "@types/qrcode": "^1.5.6",
     "@whiskeysockets/baileys": "^7.0.0-rc.9",
     "bcryptjs": "^3.0.3",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "emoji-picker-react": "^4.16.1",
     "express": "^5.2.1",
